feat(UI): init ui

--- a/ui/components/atoms/Box/Box.module.scss
+++ b/ui/components/atoms/Box/Box.module.scss
@@ -1,4 +1,5 @@
-@import "../../../styles/variables.scss";
+@import '../../../styles/variables.scss';
+@import '../../../styles/mixins/index.scss';
 
 .root {
   display: flex;
@@ -81,4 +82,8 @@
       padding-#{to-lower-case($side)}: #{$space}px;
     }
   }
+}
+
+.bgColor {
+  @include colorClasses(background-color);
 }
