--- a/ui/components/atoms/Grid/Grid.module.scss
+++ b/ui/components/atoms/Grid/Grid.module.scss
@@ -1,5 +1,5 @@
-@import '../../styles/variables.scss';
-@import '../../styles/mixins.scss';
+@import '../../../styles/variables.scss';
+@import '../../../styles/mixins.scss';
 
 /** Не забудь поменять TGrid в файле './models/adaptive.ts' */
 $grid-cols: '1', '2', '3', '4', '5', '6', '7', '8', '9', '10', '11', '12', '13', '14', '15';
